fix: profile name overflowing on mobile device

--- a/blocks/profile-info/__name-edit-container/profile-info__name-edit-container.css
+++ b/blocks/profile-info/__name-edit-container/profile-info__name-edit-container.css
@@ -4,7 +4,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 879px) {
   .profile-info__name-edit-container {
-    display: block;
+    flex-wrap: wrap;
+    justify-content: center;
     text-align: center;
     margin-bottom: 14px;
   }
