--- a/blocks/profile-info/__name/profile-info__name.css
+++ b/blocks/profile-info/__name/profile-info__name.css
@@ -11,7 +11,6 @@
 
 @media screen and (min-width: 320px) and (max-width: 879px) {
   .profile-info__name {
-    display: inline;
     margin: 0;
     font-size: 22px;
   }
